--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "deploy to heroku",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app"
   },
   "author": "Academy Step Dombrovsky I.V.",
   "license": "ISC",
